Bug #46881 --> set the charset correctly for mutlipart/alternative r=rhp